# Bodybuilding-Recommendation-API

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
alembic/versions/: 20260425_0001_mvp_schema.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  measurements.py  recommendations.py  router.py  users.py
app/core/: config.py  security.py
app/db/: base.py
app/models/: __init__.py  measurement.py  user.py
app/schemas/: __init__.py  auth.py  measurement.py  recommendation.py  user.py
app/services/: auth.py  measurements.py  recommendation_engine.py  users.py
app/tests/: conftest.py  test_auth.py  test_measurements.py  test_models_metadata.py  test_mvp_flow.py  test_recommendation_engine.py  test_recommendations_api.py  test_security.py  test_users.py
docs/: api-contract.md  deploy-render.md  errors.md  mvp-final-audit.md  mvp.md  smoke-test-checklist.md
scripts/: smoke_deploy.sh
specs/: 00-project-overview.md  01-functional-requirements.md  02-domain-formulas.md  03-api-contract.md  04-data-model.md  05-architecture.md  06-testing-spec.md  07-codex-implementation-plan.md  08-readme-for-codex.md
