[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bodybuilding-recommendation-api"
version = "0.1.0"
description = "Backend-only MVP REST API scaffold for bodybuilding phase recommendations."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13,<2.0",
    "email-validator>=2.1,<3.0",
    "fastapi>=0.110,<1.0",
    "passlib[argon2]>=1.7,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "pydantic-settings>=2.2,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.4,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
